objects/CSIRCD__ATTUSWDSFConfig__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for Single Lookup CSI Watch List Check.</description>
    <fields>
        <fullName>CSIRCD__ATTUS_GUID__c</fullName>
        <description>Contact CSI Customer Service for this information.</description>
        <inlineHelpText>Contact CSI Customer Service for this information.</inlineHelpText>
        <label>CSI GUID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Account_Record_Types__c</fullName>
        <description>Comma-separated list of record type names to be used in the single lookup search.</description>
        <inlineHelpText>Enter a comma-separated list of the Account record type names to be used in the single lookup search. Leave this field blank to include all Account record types.</inlineHelpText>
        <label>Account Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Address_DQ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact CSI Customer Service for this information.</description>
        <inlineHelpText>Flag indicating whether or not to use available address information to disqualify a name.</inlineHelpText>
        <label>Address DQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Address_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact CSI Customer Service for this information.</description>
        <inlineHelpText>Flag indicating whether or not to consider the address information when reporting a match.</inlineHelpText>
        <label>Street Address Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Corp_Name__c</fullName>
        <description>Contact CSI Customer Service for this information.</description>
        <inlineHelpText>Company Name used when logging into WatchDOG Elite web application.</inlineHelpText>
        <label>Corp Name</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Host_Name__c</fullName>
        <description>Contact CSI Customer Service for this information.</description>
        <inlineHelpText>The hostname portion of the URL.</inlineHelpText>
        <label>Host Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__List_Codes_Extended__c</fullName>
        <description>Contact CSI Customer Service for this information.</description>
        <inlineHelpText>Place for additional List Codes (if needed).  Separate multiple list codes by commas.</inlineHelpText>
        <label>List Codes (Extended)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__List_Codes__c</fullName>
        <description>Contact CSI Customer Service for this information.</description>
        <inlineHelpText>Separate multiple list codes by commas.</inlineHelpText>
        <label>List Codes</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Lookup_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this checkbox will automate single lookup to pull watch list checks when an Account is Edited or Created</inlineHelpText>
        <label>Automate Account Watch List Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Lookup_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this checkbox will automate single lookup to pull watch list checks when a Contact is Edited or Created</inlineHelpText>
        <label>Automate Contact Watch List Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Lookup_Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this checkbox will automate single lookup to pull watch list checks when a Lead is Edited or Created</inlineHelpText>
        <label>Automate Lead Watch List Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Save_Data_at_ATTUS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact CSI Customer Service for this information.</description>
        <inlineHelpText>Flag indicating whether or not to save data in WatchDOG Elite database.</inlineHelpText>
        <label>Save Data at CSI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Tolerance__c</fullName>
        <description>Contact CSI Customer Service for this information.</description>
        <inlineHelpText>Minimum match score for reporting.</inlineHelpText>
        <label>Tolerance</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CSIRCD__URL__c</fullName>
        <description>URL used to access CSI Web Services.  Contact CSI Support for this information.</description>
        <inlineHelpText>URL used to access CSI Web Services.  Contact CSI Support for this information.</inlineHelpText>
        <label>URL</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Update_Master_DB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this option will save your data to your master database for scanning against future watch list updates.</description>
        <inlineHelpText>Checking this option will save your data to your master database for scanning against future watch list updates.</inlineHelpText>
        <label>Update Master DB</label>
        <type>Checkbox</type>
    </fields>
    <label>CSI Single Lookup Watch List Settings</label>
</CustomObject>